feat(first-pass): first setup of presentation content

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       >
         <div class="dio-column">
           <div class="dio-stack">
-            <h1>🧞‍♂️ DJ Selektor 2</h1>
-            <p>selectors, currying & memoisation</p>
+            <h1>🤷‍♀️ Selector?</h1>
+            <p>select from an object (performantly)</p>
             <p></p>
             <div class="dio-columns dio-columns--gap-1 dio-align--center ">
               <div class="dio-column">
@@ -61,18 +61,17 @@
       >
         <div class="dio-column">
           <div class="dio-stack">
-            <h1>🧞‍♂️ DJ Selektor 3</h1>
-            <p>selectors, currying & memoisation</p>
-            <p></p>
+            <h1>🍱 Selecting from an Object</h1>
             <code>
-              function foo() { what }
+              state => state.massive
             </code>
+            <p></p>
             <div class="dio-columns dio-columns--gap-1 dio-align--center ">
               <div class="dio-column">
                 <a href="#/slide/2" data-navigo><-</a>
               </div>
               <div class="dio-column">
-                <a href="#/slide/3" data-navigo>-></a>
+                <a href="#/slide/4" data-navigo>-></a>
               </div>
             </div>
           </div>
@@ -80,7 +79,171 @@
       </div>
     </main>
 
+    <!-- slide -->
+    <main data-id="4" data-id-current>
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🚨 Reference equality</h1>
+            <code>
+              math === respek
+            </code>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/3" data-navigo><-</a>
+              </div>
+              <div class="dio-column">
+                <a href="#/slide/5" data-navigo>-></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- slide -->
+    <main data-id="5">
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🍛 Function Currying</h1>
+            <code>
+              () => () => () => true
+            </code>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/4" data-navigo><-</a>
+              </div>
+              <div class="dio-column">
+                <a href="#/slide/6" data-navigo>-></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- slide -->
+    <main data-id="6">
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🌝 Why curry a Function?</h1>
+            <code>myFunction(but)(why)</code>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/5" data-navigo><-</a>
+              </div>
+              <div class="dio-column">
+                <a href="#/slide/7" data-navigo>-></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- slide -->
+    <main data-id="7">
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🧛 Function Memoization</h1>
+            <p>you are feeling sleepy.</p>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/6" data-navigo><-</a>
+              </div>
+              <div class="dio-column">
+                <a href="#/slide/8" data-navigo>-></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- slide -->
+    <main data-id="8">
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🦄 Selector Memoization</h1>
+            <code>() => ✨ => {}</code>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/7" data-navigo><-</a>
+              </div>
+              <div class="dio-column">
+                <a href="#/slide/9" data-navigo>-></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- slide -->
+    <main data-id="9">
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🍄 Recap Selektor</h1>
+            <p>how we use selectors</p>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/8" data-navigo><-</a>
+              </div>
+              <div class="dio-column">
+                <a href="#/slide/10" data-navigo>-></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- slide -->
+    <main data-id="10">
+      <div
+        class="dio-columns dio-align--center dio-width--fill dio-height--fill"
+      >
+        <div class="dio-column">
+          <div class="dio-stack">
+            <h1>🙌 Fin.</h1>
+            <code></code>
+            <p></p>
+            <div class="dio-columns dio-columns--gap-1 dio-align--center ">
+              <div class="dio-column">
+                <a href="#/slide/9" data-navigo><-</a>
+              </div>
+              <div class="dio-column"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
     <script src="src/index.ts"></script>
+    <script src="src/_global-utils.ts"></script>
     <script src="src/currying.ts"></script>
     <script src="src/selecting.ts"></script>
     <script src="src/memoisation.ts"></script>
